<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/add_low_priority_task"
            android:id="@+id/btn_low_priority" />

    <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/add_medium_priority_task"
            android:id="@+id/btn_med_priority" />

    <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/add_high_priority_task"
            android:id="@+id/btn_high_priority" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="10dp"
        android:layout_margin="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp">
        <TextView
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:text="@string/low_priority_tasks"
            android:textSize="25sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_default_value"
            android:id="@+id/tv_low_priority"
            android:textSize="25sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp">
        <TextView
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:text="@string/medium_priority_tasks"
            android:textSize="25sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_default_value"
            android:id="@+id/tv_med_priority"
            android:textSize="25sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp">
        <TextView
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:text="@string/high_priority_tasks"
            android:textSize="25sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_default_value"
            android:id="@+id/tv_high_priority"
            android:textSize="25sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="20dp">
        <TextView
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:text="@string/tasks_in_progress"
            android:textSize="25sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_default_value"
            android:id="@+id/tv_tasks_in_progress"
            android:textSize="25sp"/>
    </LinearLayout>


</androidx.appcompat.widget.LinearLayoutCompat>